# qt6-test

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp  singleton.hpp
lib/: CMakeLists.txt  thing.cpp  thing.hpp
main/: application.qml  main.cpp  qml.qrc
mycomponents/: CheckBox.qml  qmldir
